[workspace]
members = [".", "codegen"]

[package]
name = "include-flate"
version = "0.3.1"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SOF3/include-flate.git"
homepage = "https://github.com/SOF3/include-flate"
description = "A variant of include_bytes!/include_str! with compile-time deflation and runtime lazy inflation"
categories = ["compression", "rust-patterns", "memory-management"]
keywords = ["compression", "deflate", "macro", "include", "assets"]

[dependencies]
include-flate-codegen = { version = "0.2.0", path = "codegen" }
once_cell = "1.18.0"
libflate = { version = "2.0.0", optional = true }
zstd = { version = "0.13.0", optional = true }

[features]
default = ["deflate"]
deflate = ["include-flate-codegen/deflate", "dep:libflate"]
zstd = ["include-flate-codegen/zstd", "dep:zstd"]
