[workspace]
members = [".", "codegen", "compress"]

[package]
name = "include-flate"
version = "0.3.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SOF3/include-flate.git"
homepage = "https://github.com/SOF3/include-flate"
description = "A variant of include_bytes!/include_str! with compile-time deflation and runtime lazy inflation"
categories = ["compression", "rust-patterns", "memory-management"]
keywords = ["compression", "deflate", "macro", "include", "assets"]
include = ["/src", "/LICENSE", "/README.md"]

[dependencies]
include-flate-codegen = { version = "0.3.0", path = "codegen" }
include-flate-compress = { version = "0.3.0", path = "compress" }
once_cell = "1.18.0"
libflate = "2.0.0"
zstd = "0.13.0"

[features]
default = ["deflate", "zstd"]
deflate = ["include-flate-compress/deflate"]
zstd = ["include-flate-compress/zstd"]
no-compression-warnings = ["include-flate-codegen/no-compression-warnings"]
