[package]
name = "include-flate-codegen-exports"
version = "0.1.4"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/SOF3/include-flate.git"
homepage = "https://github.com/SOF3/include-flate"
description = "Macro codegen for the include-flate crate"

[dependencies]
include-flate-codegen = { version = "0.1.4", path = "../codegen" }
proc-macro-hack = "0.5.9"

[features]
stable = ["include-flate-codegen/stable"]
std = []