[package]
name = "include-flate-codegen"
version = "0.3.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SOF3/include-flate.git"
homepage = "https://github.com/SOF3/include-flate"
description = "Macro codegen for the include-flate crate"

[lib]
proc-macro = true

[dependencies]
libflate = "2.0.0"
proc-macro2 = "1.0.9"
quote = "1.0.2"
syn = { version = "2.0.2", features = ["full"] }
zstd = "0.13.0"
include-flate-compress = { version = "0.3.0", path = "../compress" }
proc-macro-error = "1.0.4"

[features]
default = []
no-compression-warnings = []
