[package]
name = "include-flate-codegen"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Macro codegen for the include-flate crate"

[lib]
proc-macro = true

[dependencies]
libflate = { workspace = true }
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
zstd = { workspace = true }
include-flate-compress = { version = "0.3.1", path = "../compress" }
proc-macro-error = "1.0.4"

[features]
default = []
no-compression-warnings = []
