[package]
name = "include-flate-codegen-stable"
version = "0.1.2"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/SOF3/include-flate.git"
homepage = "https://github.com/SOF3/include-flate"
description = "Macro codegen for the include-flate crate"

[dependencies]
include-flate-codegen = { version = "0.1.2", path = "../codegen", features = ["stable"] }
proc-macro-hack = "0.5.9"
