[package]
name = "include-flate-compress"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>", "Kento Oki <hrn832@protonmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SOF3/include-flate.git"
homepage = "https://github.com/SOF3/include-flate"
description = "Compression algorithm provider"

[dependencies]
libflate = "2.0.0"
zstd = "0.13.0"
