[package]
name = "include-flate-compress"
version = "0.3.0"
authors = ["SOFe <sofe2038@gmail.com>", "Kento Oki <hrn832@protonmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SOF3/include-flate.git"
homepage = "https://github.com/SOF3/include-flate"
description = "Compression algorithm provider"

[dependencies]
libflate = { version = "2.0.0", optional = true }
zstd = { version = "0.13.0", optional = true }

[features]
default = ["deflate", "zstd"]
deflate = ["dep:libflate"]
zstd = ["dep:zstd"]
